Add form shell for user submitted input to index.html.

--- a/index.html
+++ b/index.html
@@ -7,3 +7,14 @@
   <link rel="icon" type="image/png" href="img/favicon.png">
   <title>Robo-Rodgers Code Review</title>
 </head>
+<body>
+  <div class="container">
+    <h1>Robo Rodgers Robo-translator</h1>
+    <form id="robot">
+      <div class="form-group">
+        <label for="userNumber">Enter a number for Robo-Rodgers to translate for you.</label>
+        <input id="userNumber" type="text">
+      </div>
+    </form>
+  </div>
+</body>
