--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     <h1>Robo Rodgers Robo-translator</h1>
     <form id="robot">
       <div class="form-group">
-        <label for="userNumber">Enter a number for Robo-Rodgers to translate for you.</label>
-        <input id="userNumber" type="text">
+        <label for="userInput">Enter a number for Robo-Rodgers to translate for you.</label>
+        <input id="userInput" type="text">
       </div>
     </form>
   </div>
