--- a/index.html
+++ b/index.html
@@ -10,11 +10,14 @@
 <body>
   <div class="container">
     <h1>Robo Rodgers Robo-translator</h1>
-    <form id="robot">
+    <form id="human">
       <div class="form-group">
-        <label for="userInput">Enter a number for Robo-Rodgers to translate for you.</label>
-        <input id="userInput" type="text">
+        <label for="translate">Enter a number for Robo-Rodgers to translate for you.</label>
+        <input id="translate" type="text">
+        <button type="submit" class="btn">enter</button>
       </div>
     </form>
+    <div id="result">      
+    </div>
   </div>
 </body>
