Add css stylings, reformat html, minor refactoring.

--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
-<head>
+<html>
+  <head>
   <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
   <link href="css/styles.css" rel="stylesheet" type="text/css">
   <link href="bulma.css" rel="stylesheet" type="text/css">
@@ -6,18 +7,24 @@
   <script src="js/scripts.js"></script>
   <link rel="icon" type="image/png" href="img/favicon.png">
   <title>Robo-Rodgers Code Review</title>
-</head>
-<body>
-  <div class="container">
-    <h1>Robo Rodgers Robo-translator</h1>
-    <form id="human">
-      <div class="form-group">
-        <label for="translate">Enter a number for Robo-Rodgers to translate for you.</label>
-        <input id="translate" type="text">
-        <button type="submit" class="btn">enter</button>
+  </head>
+      <body>
+              <h1>Robot Translator</h1>
+        </div>
+              <h2>Beep Boop!</h2>
+              <h3>Rules:</h3>
+              <p>rule0</p>
+              <p>rule1</p>
+              <p>rule2</p>
+              <p>rule 3</p>
+              <label>Hello Human, enter your input here.</label>
+              <input id = "input"></input>
+              <button class = "btn btn-primary" id = "submit">Submit</button>
+              <ul id = "output">
+                  <li id = "hidden"></li>
+              </ul>
+            </div>
+        </div>
       </div>
-    </form>
-    <div id="result">      
-    </div>
-  </div>
-</body>
+  </body>
+</html>
