Fully resolve lost work from detached head. Verify funcitonality. Add minor refactor/styling. Prepare for deployment to gh-pages.

--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
   <script src="js/jquery-3.5.1.js"></script>
   <script src="js/scripts.js"></script>
   <link rel="icon" type="image/png" href="img/favicon.png">
-  <title>Robo-Rodgers Code Review</title>
+  <title>Robo-Rodgers Number Translator</title>
   </head>
   <body>
     <div class="container">
-      <h1>Robot Translator</h1>
+      <h1>Robot Mr. Rodgers Number Translator</h1>
       <h2>Beep Boop!</h2>
       <h3>Here are the Rules:</h3>
       <h4>You must enter a number! No tricky business, human.</h4>
