--- a/index.html
+++ b/index.html
@@ -9,6 +9,23 @@
   <title>Robo-Rodgers Number Translator</title>
   </head>
   <body>
+    <svg viewbox="0 0 50 50" width="50" height="50">
+      <defs>
+        <mask id="mask" x="0" y="0" width="100" height="49">
+          <rect x="0.5" y="0.5" width="99" height="99" fill="#fff"/>
+          <text x="4" text-anchor="middle" y="50" dy="0">h</text>
+          <text x="8" text-anchor="middle" y="50" dy="0">i</text>
+          <text x="11" text-anchor="middle" y="50" dy="0"> </text>
+          <text x="15" text-anchor="middle" y="50" dy="0">h</text>
+          <text x="21" text-anchor="middle" y="50" dy="0">u</text>
+          <text x="29" text-anchor="middle" y="50" dy="0">m</text>
+          <text x="37" text-anchor="middle" y="50" dy="0">a</text>
+          <text x="43" text-anchor="middle" y="50" dy="0">n</text>
+        </mask>
+      </defs>
+      <rect x="0.5" y="0.5" width="49" height="49" mask="url(#mask)" fill-opacity="1" fill="#E3DFD2"/>
+    </svg>
+    
     <div class="container">
       <h1>Robot Mr. Rodgers Number Translator</h1>
       <h2>Beep Boop!</h2>
