--- a/index.html
+++ b/index.html
@@ -4,11 +4,13 @@
   <link href="css/styles.css" rel="stylesheet" type="text/css">
   <script src="js/jquery-3.5.1.js"></script>
   <script src="js/scripts.js"></script>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@1,700&display=swap" rel="stylesheet">
   <link rel="icon" type="image/png" href="img/favicon.png">
   <title>Robo-Rodgers Number Translator</title>
   </head>
   <body>
-    <div class="container">
+    <div class="containerX">
+      <img src="img/robot.png" alt="mr robot">
       <h1>Robot Mr. Rodgers Number Translator</h1>
       <h2>Beep Boop!</h2>
       <h3>Here are the Rules:</h3>
@@ -24,6 +26,7 @@
       <ul id="output">
         <li id="hidden" style="display: list-item;">
       </ul>
+    </div>
     </div>
 </body>
 </html>
